<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006892"
    android:padding="16dp">

    <TextView
        android:id="@+id/fishLocationTextView"
        android:text="@string/enter_the_location"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/enterLocationEditText"
        android:hint="@string/enter_location"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="text"
        android:autofillHints="Please enter location"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/favoriteLocationButton"
        android:text="@string/set_as_favorite_location"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"

        />

    <Button
        android:id="@+id/setLocationButton"
        android:text="@string/enter_location_button"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"

        />

</LinearLayout>