<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006892"
    tools:context=".LandingPageActivity">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:layout_marginTop="124dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/generalInfoButton"
        android:text="@string/general_information"
        app:layout_constraintTop_toBottomOf="@id/usernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="270dp"
        android:layout_height="105dp"
        android:textSize="25sp"
        android:backgroundTint="#000"
        />

    <Button
        android:id="@+id/locationButton"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@id/generalInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="270dp"
        android:layout_height="105dp"
        android:textSize="25sp"
        android:backgroundTint="#000"
        />

    <Button
        android:id="@+id/caughtInfoButton"
        android:text="@string/caught_fish_info"
        app:layout_constraintTop_toBottomOf="@id/locationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="270dp"
        android:layout_height="105dp"
        android:textSize="25sp"
        android:backgroundTint="#000"
        />

    <Button
        android:id="@+id/logOutButton"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/caughtInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:backgroundTint="#000"
        />

    <Button
        android:id="@+id/adminButton"
        android:text="@string/admin"
        app:layout_constraintTop_toBottomOf="@id/logOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:backgroundTint="#000"
        android:visibility="invisible"
        />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>