<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <TextView
        android:id="@+id/fishLocationTextView"
        android:text="@string/enter_the_location"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/enterLocationEditText"
        android:hint="@string/enter_location"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="text"
        android:autofillHints="Please enter location"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/fishLocationTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/favoriteLocationButton"
        android:text="@string/set_as_favorite_location"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/enterLocationEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/setLocationButton"
        android:text="@string/enter_location_button"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/favoriteLocationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>