<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/appTitleText"
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/previousLoginButton"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/appTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="270dp"
        android:layout_height="105dp"
        android:textSize="25sp"
        android:backgroundTint="#000"
        />

    <Button
        android:id="@+id/createAccountButton"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@id/previousLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="270dp"
        android:layout_height="105dp"
        android:textSize="25sp"
        android:backgroundTint="#000"
        />

</androidx.constraintlayout.widget.ConstraintLayout>