<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006892"
    tools:context=".FishInformationActivity">

    <TextView
        android:id="@+id/generalInfoTitleTextView"
        android:text="@string/fish_information"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/fishLengthEditText"
        android:inputType="numberDecimal"
        android:hint="@string/fish_length"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:autofillHints="Fish!"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/generalInfoTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/fishWeightEditText"
        android:hint="@string/fish_weight"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:autofillHints="Fish!"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/fishLengthEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/logFishButton"
        android:text="@string/enter_fish_information"
        android:backgroundTint="@color/black"
        android:layout_width="300dp"
        android:textSize="20sp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/fishWeightEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/filocatiionReturnButton"
        android:text="@string/return_to_welcome_hub"
        android:backgroundTint="@color/black"
        android:layout_width="300dp"
        android:textSize="20sp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/logFishButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>